src/yini_test/cases/golden/strict/valid/inline-objects/empty-inline-object.strict.yini
@yini strict

^ Objects
settings = {}

/END

