src/yini_test/cases/golden/strict/invalid/numbers/malformed-underscore-leading.strict.yini
@yini strict

^ Numbers
val = _123

/END

